--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #banco de dados local apirest
 
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/concessionaria
+spring.datasource.url=jdbc:mysql://localhost:xxxx/concessionaria
 spring.datasource.username= root
-spring.datasource.password= Carol.25
+spring.datasource.password= xxxx
